<resources>
    <string name="notification_content">"Today's steps are &#160;"</string>
    <string name="back_toast" translatable="false">Press again to exit the program</string>
    <string name="abc_action_bar_home_description" translatable="false">Navigate home</string>
    <string name="abc_action_bar_home_description_format" translatable="false">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format" translatable="false">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description" translatable="false">Navigate up</string>
    <string name="abc_action_menu_overflow_description" translatable="false">More options</string>
    <string name="abc_action_mode_done" translatable="false">Done</string>
    <string name="abc_activity_chooser_view_see_all" translatable="false">See all</string>
    <string name="abc_activitychooserview_choose_application" translatable="false">Choose an app</string>
    <string name="abc_capital_off" translatable="false">OFF</string>
    <string name="abc_capital_on" translatable="false">ON</string>
    <string name="abc_search_hint" translatable="false">Search…</string>
    <string name="abc_searchview_description_clear" translatable="false">Clear query</string>
    <string name="abc_searchview_description_query" translatable="false">Search query</string>
    <string name="abc_searchview_description_search" translatable="false">Search</string>
    <string name="abc_searchview_description_submit" translatable="false">Submit query</string>
    <string name="abc_searchview_description_voice" translatable="false">Voice search</string>
    <string name="abc_shareactionprovider_share_with" translatable="false">Share with</string>
    <string name="abc_shareactionprovider_share_with_application" translatable="false">Share with %s</string>
    <string name="abc_toolbar_collapse_description" translatable="false">Collapse</string>
    <string name="common_google_play_services_enable_button" translatable="false">Enable</string>
    <string name="common_google_play_services_enable_text" translatable="false">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title" translatable="false">Enable Google Play services</string>
    <string name="common_google_play_services_install_button" translatable="false">Install</string>
    <string name="common_google_play_services_install_text" translatable="false">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title" translatable="false">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker" translatable="false">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue" translatable="false">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text" translatable="false">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button" translatable="false">Update</string>
    <string name="common_google_play_services_update_text" translatable="false">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title" translatable="false">Update Google Play services</string>
    <string name="common_google_play_services_updating_text" translatable="false">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text" translatable="false">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone" translatable="false">Open on phone</string>
    <string name="common_signin_button_text" translatable="false">Sign in</string>
    <string name="common_signin_button_text_long" translatable="false">Sign in with Google</string>
    <string name="exo_controls_fastforward_description" translatable="false">Fast forward</string>
    <string name="exo_controls_next_description" translatable="false">Next track</string>
    <string name="exo_controls_pause_description" translatable="false">Pause</string>
    <string name="exo_controls_play_description" translatable="false">Play</string>
    <string name="exo_controls_previous_description" translatable="false">Previous track</string>
    <string name="exo_controls_rewind_description" translatable="false">Rewind</string>
    <string name="exo_controls_stop_description" translatable="false">Stop</string>
    <string name="search_menu_title" translatable="false">Search</string>
    <string name="status_bar_notification_info_overflow" translatable="false">999+</string>
    <string name="EXIT" translatable="false">EXIT</string>
    <string name="accuracy_ins_content" translatable="false">We use the <b>built-in sensor</b> in your phone to count your steps, so the accuracy is based on how good the sensor is.</string>
    <string name="accuracy_ins_title" translatable="false">Accuracy</string>
    <string name="app_name">Pedometer</string>
    <string name="auth_failed_tip">Authorization failed because of network problems. Please check the network and try again.</string>
    <string name="badges">Badges</string>
    <string name="battery_saving_ins_content">We read your steps from the <b>built-in sensor</b>". No GPS tracking. You can pause the app to save the battery when you're not walking."</string>
    <string name="battery_saving_ins_title">Battery Saving</string>
    <string name="btn_cancel">Cancle</string>
    <string name="btn_confirm_ok">Ok</string>
    <string name="btn_confirm_save">Save</string>
    <string name="calories_distance_time_ins_content">We use your height and weight to calculate your burned calories &amp; distance, so please ensure you input accurate information in the settings.</string>
    <string name="calories_distance_time_ins_title">Calories &amp; Distance</string>
    <string name="check_it">Check it</string>
    <string name="complete_all_badge">"You've won all badges of this week! Amazing!"</string>
    <string name="daily_average">Daily average:</string>
    <string name="daily_highest_speed">Daily Highest Speed:</string>
    <string name="dialog_set_new_goal_accept">Accept</string>
    <string name="dialog_set_new_goal_content">Set a new goal now?</string>
    <string name="dialog_set_new_goal_not_now">Not now</string>
    <string name="dialog_set_new_goal_title">"You've achieved %1$s steps for %2$s days."</string>
    <string name="distance">Distance</string>
    <string name="download">Download</string>
    <string name="exit">Exit</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_email_title">%s Feedback</string>
    <string name="feedback_mail_text">System info</string>
    <string name="female">Female</string>
    <string name="fix_it">Fix it</string>
    <string name="fix_it_now">Fix it now</string>
    <string name="forcibly_stopped">Pedometer was forcibly stopped</string>
    <string name="forcibly_stopped_reason">Due to the limitation of some devices or security apps, the Pedometer was forcibly stopped.</string>
    <string name="gender">Gender</string>
    <string name="gender_desc">Stride length calculation needs it</string>
    <string name="gender_description">Calories &amp; stride length calculation needs it.</string>
    <string name="get_app">GET FROM GOOGLE PLAY</string>
    <string name="goal_ins_content">We help you set your goal according to your achieved steps to keep you motivated.</string>
    <string name="goal_ins_title">Step Goal</string>
    <string name="goal_with_value">Goal: %s</string>
    <string name="guide_to_settings">Grant storage permission to share image</string>
    <string name="height">Height</string>
    <string name="height_desc">Distance &amp; speed calculation needs it</string>
    <string name="help">Help</string>
    <string name="high">High</string>
    <string name="history">Timeline</string>
    <string name="how_fix_stop_count">How to fix the \"Stop Counting Steps\" issue?</string>
    <string name="how_to_ensure_accuracy">How to ensure the accuracy of step counting?</string>
    <string name="how_to_fix_issue">How to fix the \"Stop Counting Steps\" issue?</string>
    <string name="how_to_ins_content">Click <b>Start</b> to count steps, and click <b>Pause</b> to stop and save the battery. Take your phone with you.</string>
    <string name="how_to_ins_title">How to</string>
    <string name="imperial">Imperial</string>
    <string name="install">Install</string>
    <string name="instructions">Instructions</string>
    <string name="kCal_1">250 Kcal</string>
    <string name="kCal_2">500 Kcal</string>
    <string name="kCal_3">1000 Kcal</string>
    <string name="kCal_4">2000 Kcal</string>
    <string name="kCal_5">3500 Kcal</string>
    <string name="kCal_6">5000 Kcal</string>
    <string name="kcal">Kcal</string>
    <string name="lib_cancel">Cancel</string>
    <string name="lib_five_stars_submit">Submit</string>
    <string name="lib_new_five_stars_choose">Your feedback is useful.</string>
    <string name="lib_new_five_stars_choose_1">I don’t like the design</string>
    <string name="lib_new_five_stars_choose_2">It doesn’t have the functions I need</string>
    <string name="lib_new_five_stars_choose_3">It’s not easy to use</string>
    <string name="lib_new_five_stars_choose_4">It’s too complicated</string>
    <string name="lib_new_five_stars_choose_5">The translation is poor</string>
    <string name="lib_new_five_stars_close">CLOSE</string>
    <string name="lib_new_five_stars_rate">"We are working hard for a better user experience.

 We’d greatly appreciate if you can rate us."</string>
    <string name="lib_new_five_stars_rate_us">"Other users will benefit from your review.

 Please leave your review on Google Play."</string>
    <string name="lib_rate">Rate</string>
    <string name="lib_rate_dislike">Disliked it</string>
    <string name="lib_rate_hate_it">Hated it</string>
    <string name="lib_rate_it_is_ok">"It's ok"</string>
    <string name="lib_rate_like_it">Liked it</string>
    <string name="lib_rate_love_it">Loved it</string>
    <string name="lib_rate_on_google">Rate on Google play</string>
    <string name="lib_the_best_we_can_get">The best we can get :)</string>
    <string name="low">Low</string>
    <string name="male">Male</string>
    <string name="medium">Medium</string>
    <string name="metric">Metric</string>
    <string name="miles">Miles</string>
    <string name="month">Month</string>
    <string name="more">More</string>
    <string name="new_record">New record</string>
    <string name="next">Next</string>
    <string name="next_badge_description">%s to win this badge</string>
    <string name="notification_goal_reached">"Achieved today's goal! Congratulation!"</string>
    <string name="pedometer_preferences">Preference Settings</string>
    <string name="pg_permission_dialog_sub_title">To make sure %s works properly</string>
    <string name="pg_permission_dialog_title">Permission Required</string>
    <string name="pg_permission_protect_app">Protected apps</string>
    <string name="profile">My Profile</string>
    <string name="step_counter_notification">Notification Bar</string>
    <string name="steps">Steps</string>
    <string name="tab_calorie">Calorie</string>
    <string name="tab_step">Step</string>
    <string name="time">Time</string>
    <string name="unit_cm">cm</string>
    <string name="unit_kg">kg</string>
    <string name="unit_type">Metric &amp; Imperial Unit</string>
    <string name="weight">Weight</string>
    <string name="weight_desc">Calories calculation needs it</string>
    <string name="update_settings">UPDATE SETTINGS</string>
</resources>