<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:background="@drawable/popwindow_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

       >
        <LinearLayout
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/pop_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/height_desc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.baisi.spedometer.view.numberpicker.NumberPicker
                android:id="@+id/number_pick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                style="@style/pop_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/unit_cm" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:paddingRight="30dp"
                android:paddingLeft="10dp"
                android:id="@+id/height_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20dp"
                android:text="@string/btn_confirm_ok"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/setting_text_show_color" />

            <TextView
                android:id="@+id/height_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/height_ok"
                android:text="@string/btn_cancel"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/setting_text_show_color"

                />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>