<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popwindow_bg">


    <LinearLayout
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="174dp"
            android:layout_height="114dp"
            android:src="@drawable/permision_run" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pg_permission_dialog_title"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pg_permission_dialog_sub_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/protect_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/pg_permission_protect_app" />

        </LinearLayout>

        <TextView
            android:id="@+id/update_setting"
            android:layout_width="263dp"
            android:layout_height="36dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/permision_bg"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:onClick="ViewClick"
            android:text="@string/update_settings"
            android:textColor="@android:color/white"
            />

    </LinearLayout>



    <ImageView
        android:id="@+id/close_icon"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_icon"
        android:onClick="ViewClick"
        android:layout_alignParentRight="true"/>
</RelativeLayout>